--- a/BlazorMusicCatalog.Data/BlazorMusicCatalog.Data.csproj
+++ b/BlazorMusicCatalog.Data/BlazorMusicCatalog.Data.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="../BlazorMusicCatalog.Models/BlazorMusicCatalog.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services/" />
+  </ItemGroup>
+
 </Project>
