--- a/BlazorMusicCatalog/BlazorMusicCatalog.csproj
+++ b/BlazorMusicCatalog/BlazorMusicCatalog.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../BlazorMusicCatalog.Data/BlazorMusicCatalog.Data.csproj" />
+    <ProjectReference Include="../BlazorMusicCatalog.Models/BlazorMusicCatalog.Models.csproj" />
+  </ItemGroup>
+
 </Project>
